fix: packegae json

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "http": "^0.0.1-security",
         "https": "^1.0.0",
         "nodemon": "^3.1.0",
+        "prismix": "1.0.22",
         "socket.io": "^4.7.5",
         "typescript": "^5.4.4",
         "ws": "^8.16.0"
